policies/test-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-signed
spec:
  restartPolicy: Never
  containers:
  - name: web
    image: docker.io/naveenbana5250/nginx:1.25
    securityContext:
      privileged: false
      allowPrivilegeEscalation: false
    resources:
      requests: { cpu: "100m", memory: "128Mi" }
      limits:   { cpu: "200m", memory: "256Mi" }
---
apiVersion: v1
kind: Pod
metadata:
  name: deny-quay
spec:
  restartPolicy: Never
  containers:
  - name: test
    image: quay.io/someimage:1.0
    securityContext:
      privileged: false
      allowPrivilegeEscalation: false
    resources:
      requests: { cpu: "100m", memory: "128Mi" }
      limits:   { cpu: "200m", memory: "256Mi" }
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
spec:
  restartPolicy: Never
  containers:
  - name: alpine
    image: docker.io/library/alpine:3.20
    securityContext:
      privileged: true
