policies/restrict-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
spec:
  admission: true
  background: true
  emitWarning: false
  rules:
    - match:
        any:
          - resources:
              kinds:
                - Pod
      name: allowed-registries
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Only images from docker.io/library, gcr.io, or docker.io/naveenbana5250/* are allowed.
        pattern:
          spec:
            containers:
              - image: docker.io/library/*|gcr.io/*|docker.io/naveenbana5250/*
                name: '*'
  validationFailureAction: Enforce
