policies/verify-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
spec:
  admission: true
  background: false
  emitWarning: false
  rules:
    - match:
        any:
          - resources:
              kinds:
                - Pod
      name: require-signed-images
      skipBackgroundRequests: true
      verifyImages:
        - attestors:
            - entries:
                - keys:
                    secret:
                      name: cosign-pub
                      namespace: kyverno
                    signatureAlgorithm: sha256
                  signatureAlgorithm: sha256
          imageReferences:
            - docker.io/naveenbana5250/*
          mutateDigest: true
          required: true
          useCache: true
          verifyDigest: true
  validationFailureAction: Enforce
